WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91005
[BlackBerry] UserViewportArguments are not properly respected.
https://bugs.webkit.org/show_bug.cgi?id=91005
Summary
[BlackBerry] UserViewportArguments are not properly respected.
Mike Lattanzio
Reported
2012-07-11 13:04:35 PDT
On load committed we apply the user viewport arguments, but they can be overwritten by a call to resetScales(). This needs to be fixed so the setting is applied consistently.
Attachments
Patch
(2.32 KB, patch)
2012-07-11 13:24 PDT
,
Mike Lattanzio
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Lattanzio
Comment 1
2012-07-11 13:24:07 PDT
Created
attachment 151760
[details]
Patch
Rob Buis
Comment 2
2012-07-11 13:31:36 PDT
Comment on
attachment 151760
[details]
Patch Looks good.
WebKit Review Bot
Comment 3
2012-07-11 14:14:40 PDT
Comment on
attachment 151760
[details]
Patch Clearing flags on attachment: 151760 Committed
r122371
: <
http://trac.webkit.org/changeset/122371
>
WebKit Review Bot
Comment 4
2012-07-11 14:14:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug