[BlackBerry] UserViewportArguments are not properly respected. https://bugs.webkit.org/show_bug.cgi?id=91005

Patch by Mike Lattanzio <mlattanzio@rim.com> on 2012-07-11
Reviewed by Rob Buis.

PR# 170088.
Move scale and zooming reset on Committed before applying
the user viewport to avoid overriding it immediately.

Internal review by Konrad Piascik, Jacky Jiang.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::setLoadState):

Canonical link: https://commits.webkit.org/108847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122371 268f45cc-cd09-0410-ab3c-d52691b4dbfc